Quorum/Library/Tests/Expressions/Pass/BooleanAndOrAnd.quorum
class Main 
    action Main
        boolean a = true and (false or (false and true))
        output a
    end
end