Quorum/Library/Tests/Expressions/Fail/UndefinedFieldUsage.quorum
class Main
    number var = var:GetMaximumValue()
    action Main
    
    end
end